# klefki-rs

./: .gitignore  Cargo.toml
BigNumberField/: Cargo.toml
algebra/: Cargo.toml
algebra/src/: lib.rs  traits.rs
algebra/src/fields/: prime.rs
algebraTraits/: Cargo.toml
algebraTraits/src/: lib.rs
klefki_derive/: Cargo.toml
klefki_derive/src/: lib.rs
src/: lib.rs  main.rs
src/algebra/: mod.rs  traits.rs
src/algebra/fields/: arithmetic.rs  mod.rs  prime.rs
src/algebra/groups/: arithmetic.rs  ecg.rs  mod.rs
src/algebra/rings/: integer.rs
src/curves/: baby_jubjub.rs  mod.rs
src/curves/baby_jubjub/: curve.rs  ff.rs  mod.rs
src/curves/secp256k1/: ff.rs  mod.rs
src/impls/: consts.rs  mod.rs
src/types/: algebra.rs
