[package]
name = "klefki_derive"
version = "0.1.0"
authors = ["Ryan.K <ryankung@ieee.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.60"
proc-macro2 = "1.0.24"
quote = "1.0.8"

[lib]
proc-macro = true